REPO/Practicas/Practica3/y.output
   0  $accept : file_input $end

   1  file_input :
   2             | aux0

   3  aux0 : stmt
   4       | aux0 stmt
   5       | NEWLINE
   6       | aux0 NEWLINE

   7  stmt : simple_stmt
   8       | compound_stmt

   9  simple_stmt : small_stmt NEWLINE

  10  small_stmt : expr_stmt
  11             | print_stmt

  12  expr_stmt : test
  13            | test aux1

  14  aux1 : EQ test
  15       | augassign test

  16  augassign : MASEQ
  17            | MENOSEQ

  18  print_stmt : PRINT test

  19  compound_stmt : if_stmt
  20                | while_stmt

  21  if_stmt : IF test DOSPUNT suite
  22          | IF test DOSPUNT suite ELSE DOSPUNT suite
  23          | IF test DOSPUNT suite if_stmt_aux ELSE DOSPUNT suite

  24  if_stmt_aux : ELIF test DOSPUNT suite
  25              | if_stmt_aux ELIF test DOSPUNT suite

  26  while_stmt : WHILE test DOSPUNT suite

  27  suite : simple_stmt
  28        | NEWLINE INDENT aux2 DEDENT

  29  aux2 : stmt
  30       | aux2 stmt

  31  test : or_test

  32  or_test : and_test
  33          | and_test aux3

  34  aux3 : OR and_test
  35       | aux3 OR and_test

  36  and_test : not_test
  37           | not_test aux4

  38  aux4 : AND not_test
  39       | aux4 AND not_test

  40  not_test : NOT not_test
  41           | comparison

  42  comparison : expr
  43             | expr aux5

  44  aux5 : comp_op expr
  45       | aux5 comp_op expr

  46  comp_op : MENORQ
  47          | MAYORQ
  48          | EQEQ
  49          | MAYOREQ
  50          | MENOREQ
  51          | DIF
  52          | IN
  53          | NOTIN

  54  expr : term
  55       | term aux6

  56  aux6 : MAS term
  57       | MENOS term
  58       | aux6 MAS term
  59       | aux6 MENOS term

  60  term : factor
  61       | factor aux7

  62  aux7 : POR factor
  63       | DIVENTERA factor
  64       | MODULO factor
  65       | DIV factor
  66       | aux7 POR factor
  67       | aux7 DIVENTERA factor
  68       | aux7 MODULO factor
  69       | aux7 DIV factor

  70  factor : MAS factor
  71         | MENOS factor
  72         | power

  73  power : atom
  74        | atom POTENCIA factor

  75  atom : IDENTIFIER
  76       | ENTERO
  77       | CADENA
  78       | REAL
  79       | BOOLEAN

state 0
	$accept : . file_input $end  (0)
	file_input : .  (1)

	NEWLINE  shift 1
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	PRINT  shift 7
	MAS  shift 8
	MENOS  shift 9
	IF  shift 10
	WHILE  shift 11
	NOT  shift 12
	$end  reduce 1

	file_input  goto 13
	aux0  goto 14
	stmt  goto 15
	simple_stmt  goto 16
	compound_stmt  goto 17
	small_stmt  goto 18
	expr_stmt  goto 19
	print_stmt  goto 20
	test  goto 21
	if_stmt  goto 22
	while_stmt  goto 23
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 1
	aux0 : NEWLINE .  (5)

	.  reduce 5


state 2
	atom : IDENTIFIER .  (75)

	.  reduce 75


state 3
	atom : ENTERO .  (76)

	.  reduce 76


state 4
	atom : REAL .  (78)

	.  reduce 78


state 5
	atom : CADENA .  (77)

	.  reduce 77


state 6
	atom : BOOLEAN .  (79)

	.  reduce 79


state 7
	print_stmt : PRINT . test  (18)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	test  goto 33
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 8
	factor : MAS . factor  (70)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 34
	power  goto 31
	atom  goto 32


state 9
	factor : MENOS . factor  (71)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 35
	power  goto 31
	atom  goto 32


state 10
	if_stmt : IF . test DOSPUNT suite  (21)
	if_stmt : IF . test DOSPUNT suite ELSE DOSPUNT suite  (22)
	if_stmt : IF . test DOSPUNT suite if_stmt_aux ELSE DOSPUNT suite  (23)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	test  goto 36
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 11
	while_stmt : WHILE . test DOSPUNT suite  (26)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	test  goto 37
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 12
	not_test : NOT . not_test  (40)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	not_test  goto 38
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 13
	$accept : file_input . $end  (0)

	$end  accept


state 14
	file_input : aux0 .  (2)
	aux0 : aux0 . stmt  (4)
	aux0 : aux0 . NEWLINE  (6)

	NEWLINE  shift 39
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	PRINT  shift 7
	MAS  shift 8
	MENOS  shift 9
	IF  shift 10
	WHILE  shift 11
	NOT  shift 12
	$end  reduce 2

	stmt  goto 40
	simple_stmt  goto 16
	compound_stmt  goto 17
	small_stmt  goto 18
	expr_stmt  goto 19
	print_stmt  goto 20
	test  goto 21
	if_stmt  goto 22
	while_stmt  goto 23
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 15
	aux0 : stmt .  (3)

	.  reduce 3


state 16
	stmt : simple_stmt .  (7)

	.  reduce 7


state 17
	stmt : compound_stmt .  (8)

	.  reduce 8


state 18
	simple_stmt : small_stmt . NEWLINE  (9)

	NEWLINE  shift 41
	.  error


state 19
	small_stmt : expr_stmt .  (10)

	.  reduce 10


state 20
	small_stmt : print_stmt .  (11)

	.  reduce 11


state 21
	expr_stmt : test .  (12)
	expr_stmt : test . aux1  (13)

	EQ  shift 42
	MASEQ  shift 43
	MENOSEQ  shift 44
	NEWLINE  reduce 12

	aux1  goto 45
	augassign  goto 46


state 22
	compound_stmt : if_stmt .  (19)

	.  reduce 19


state 23
	compound_stmt : while_stmt .  (20)

	.  reduce 20


state 24
	test : or_test .  (31)

	.  reduce 31


state 25
	or_test : and_test .  (32)
	or_test : and_test . aux3  (33)

	OR  shift 47
	NEWLINE  reduce 32
	EQ  reduce 32
	MASEQ  reduce 32
	MENOSEQ  reduce 32
	DOSPUNT  reduce 32

	aux3  goto 48


state 26
	and_test : not_test .  (36)
	and_test : not_test . aux4  (37)

	AND  shift 49
	NEWLINE  reduce 36
	EQ  reduce 36
	MASEQ  reduce 36
	MENOSEQ  reduce 36
	DOSPUNT  reduce 36
	OR  reduce 36

	aux4  goto 50


state 27
	not_test : comparison .  (41)

	.  reduce 41


state 28
	comparison : expr .  (42)
	comparison : expr . aux5  (43)

	MENORQ  shift 51
	MAYORQ  shift 52
	MENOREQ  shift 53
	MAYOREQ  shift 54
	EQEQ  shift 55
	DIF  shift 56
	IN  shift 57
	NOTIN  shift 58
	NEWLINE  reduce 42
	EQ  reduce 42
	MASEQ  reduce 42
	MENOSEQ  reduce 42
	DOSPUNT  reduce 42
	OR  reduce 42
	AND  reduce 42

	aux5  goto 59
	comp_op  goto 60


state 29
	expr : term .  (54)
	expr : term . aux6  (55)

	MAS  shift 61
	MENOS  shift 62
	NEWLINE  reduce 54
	EQ  reduce 54
	MENORQ  reduce 54
	MAYORQ  reduce 54
	MENOREQ  reduce 54
	MASEQ  reduce 54
	MENOSEQ  reduce 54
	MAYOREQ  reduce 54
	EQEQ  reduce 54
	DIF  reduce 54
	DOSPUNT  reduce 54
	OR  reduce 54
	AND  reduce 54
	IN  reduce 54
	NOTIN  reduce 54

	aux6  goto 63


state 30
	term : factor .  (60)
	term : factor . aux7  (61)

	POR  shift 64
	DIV  shift 65
	DIVENTERA  shift 66
	MODULO  shift 67
	NEWLINE  reduce 60
	MAS  reduce 60
	MENOS  reduce 60
	EQ  reduce 60
	MENORQ  reduce 60
	MAYORQ  reduce 60
	MENOREQ  reduce 60
	MASEQ  reduce 60
	MENOSEQ  reduce 60
	MAYOREQ  reduce 60
	EQEQ  reduce 60
	DIF  reduce 60
	DOSPUNT  reduce 60
	OR  reduce 60
	AND  reduce 60
	IN  reduce 60
	NOTIN  reduce 60

	aux7  goto 68


state 31
	factor : power .  (72)

	.  reduce 72


state 32
	power : atom .  (73)
	power : atom . POTENCIA factor  (74)

	POTENCIA  shift 69
	NEWLINE  reduce 73
	MAS  reduce 73
	MENOS  reduce 73
	POR  reduce 73
	DIV  reduce 73
	DIVENTERA  reduce 73
	MODULO  reduce 73
	EQ  reduce 73
	MENORQ  reduce 73
	MAYORQ  reduce 73
	MENOREQ  reduce 73
	MASEQ  reduce 73
	MENOSEQ  reduce 73
	MAYOREQ  reduce 73
	EQEQ  reduce 73
	DIF  reduce 73
	DOSPUNT  reduce 73
	OR  reduce 73
	AND  reduce 73
	IN  reduce 73
	NOTIN  reduce 73


state 33
	print_stmt : PRINT test .  (18)

	.  reduce 18


state 34
	factor : MAS factor .  (70)

	.  reduce 70


state 35
	factor : MENOS factor .  (71)

	.  reduce 71


state 36
	if_stmt : IF test . DOSPUNT suite  (21)
	if_stmt : IF test . DOSPUNT suite ELSE DOSPUNT suite  (22)
	if_stmt : IF test . DOSPUNT suite if_stmt_aux ELSE DOSPUNT suite  (23)

	DOSPUNT  shift 70
	.  error


state 37
	while_stmt : WHILE test . DOSPUNT suite  (26)

	DOSPUNT  shift 71
	.  error


state 38
	not_test : NOT not_test .  (40)

	.  reduce 40


state 39
	aux0 : aux0 NEWLINE .  (6)

	.  reduce 6


state 40
	aux0 : aux0 stmt .  (4)

	.  reduce 4


state 41
	simple_stmt : small_stmt NEWLINE .  (9)

	.  reduce 9


state 42
	aux1 : EQ . test  (14)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	test  goto 72
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 43
	augassign : MASEQ .  (16)

	.  reduce 16


state 44
	augassign : MENOSEQ .  (17)

	.  reduce 17


state 45
	expr_stmt : test aux1 .  (13)

	.  reduce 13


state 46
	aux1 : augassign . test  (15)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	test  goto 73
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 47
	aux3 : OR . and_test  (34)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	and_test  goto 74
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 48
	or_test : and_test aux3 .  (33)
	aux3 : aux3 . OR and_test  (35)

	OR  shift 75
	NEWLINE  reduce 33
	EQ  reduce 33
	MASEQ  reduce 33
	MENOSEQ  reduce 33
	DOSPUNT  reduce 33


state 49
	aux4 : AND . not_test  (38)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	not_test  goto 76
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 50
	and_test : not_test aux4 .  (37)
	aux4 : aux4 . AND not_test  (39)

	AND  shift 77
	NEWLINE  reduce 37
	EQ  reduce 37
	MASEQ  reduce 37
	MENOSEQ  reduce 37
	DOSPUNT  reduce 37
	OR  reduce 37


state 51
	comp_op : MENORQ .  (46)

	.  reduce 46


state 52
	comp_op : MAYORQ .  (47)

	.  reduce 47


state 53
	comp_op : MENOREQ .  (50)

	.  reduce 50


state 54
	comp_op : MAYOREQ .  (49)

	.  reduce 49


state 55
	comp_op : EQEQ .  (48)

	.  reduce 48


state 56
	comp_op : DIF .  (51)

	.  reduce 51


state 57
	comp_op : IN .  (52)

	.  reduce 52


state 58
	comp_op : NOTIN .  (53)

	.  reduce 53


state 59
	comparison : expr aux5 .  (43)
	aux5 : aux5 . comp_op expr  (45)

	MENORQ  shift 51
	MAYORQ  shift 52
	MENOREQ  shift 53
	MAYOREQ  shift 54
	EQEQ  shift 55
	DIF  shift 56
	IN  shift 57
	NOTIN  shift 58
	NEWLINE  reduce 43
	EQ  reduce 43
	MASEQ  reduce 43
	MENOSEQ  reduce 43
	DOSPUNT  reduce 43
	OR  reduce 43
	AND  reduce 43

	comp_op  goto 78


state 60
	aux5 : comp_op . expr  (44)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	expr  goto 79
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 61
	aux6 : MAS . term  (56)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	term  goto 80
	factor  goto 30
	power  goto 31
	atom  goto 32


state 62
	aux6 : MENOS . term  (57)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	term  goto 81
	factor  goto 30
	power  goto 31
	atom  goto 32


state 63
	expr : term aux6 .  (55)
	aux6 : aux6 . MAS term  (58)
	aux6 : aux6 . MENOS term  (59)

	MAS  shift 82
	MENOS  shift 83
	NEWLINE  reduce 55
	EQ  reduce 55
	MENORQ  reduce 55
	MAYORQ  reduce 55
	MENOREQ  reduce 55
	MASEQ  reduce 55
	MENOSEQ  reduce 55
	MAYOREQ  reduce 55
	EQEQ  reduce 55
	DIF  reduce 55
	DOSPUNT  reduce 55
	OR  reduce 55
	AND  reduce 55
	IN  reduce 55
	NOTIN  reduce 55


state 64
	aux7 : POR . factor  (62)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 84
	power  goto 31
	atom  goto 32


state 65
	aux7 : DIV . factor  (65)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 85
	power  goto 31
	atom  goto 32


state 66
	aux7 : DIVENTERA . factor  (63)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 86
	power  goto 31
	atom  goto 32


state 67
	aux7 : MODULO . factor  (64)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 87
	power  goto 31
	atom  goto 32


state 68
	term : factor aux7 .  (61)
	aux7 : aux7 . POR factor  (66)
	aux7 : aux7 . DIVENTERA factor  (67)
	aux7 : aux7 . MODULO factor  (68)
	aux7 : aux7 . DIV factor  (69)

	POR  shift 88
	DIV  shift 89
	DIVENTERA  shift 90
	MODULO  shift 91
	NEWLINE  reduce 61
	MAS  reduce 61
	MENOS  reduce 61
	EQ  reduce 61
	MENORQ  reduce 61
	MAYORQ  reduce 61
	MENOREQ  reduce 61
	MASEQ  reduce 61
	MENOSEQ  reduce 61
	MAYOREQ  reduce 61
	EQEQ  reduce 61
	DIF  reduce 61
	DOSPUNT  reduce 61
	OR  reduce 61
	AND  reduce 61
	IN  reduce 61
	NOTIN  reduce 61


state 69
	power : atom POTENCIA . factor  (74)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 92
	power  goto 31
	atom  goto 32


state 70
	if_stmt : IF test DOSPUNT . suite  (21)
	if_stmt : IF test DOSPUNT . suite ELSE DOSPUNT suite  (22)
	if_stmt : IF test DOSPUNT . suite if_stmt_aux ELSE DOSPUNT suite  (23)

	NEWLINE  shift 93
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	PRINT  shift 7
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	simple_stmt  goto 94
	small_stmt  goto 18
	expr_stmt  goto 19
	print_stmt  goto 20
	test  goto 21
	suite  goto 95
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 71
	while_stmt : WHILE test DOSPUNT . suite  (26)

	NEWLINE  shift 93
	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	PRINT  shift 7
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	simple_stmt  goto 94
	small_stmt  goto 18
	expr_stmt  goto 19
	print_stmt  goto 20
	test  goto 21
	suite  goto 96
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 72
	aux1 : EQ test .  (14)

	.  reduce 14


state 73
	aux1 : augassign test .  (15)

	.  reduce 15


state 74
	aux3 : OR and_test .  (34)

	.  reduce 34


state 75
	aux3 : aux3 OR . and_test  (35)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	and_test  goto 97
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 76
	aux4 : AND not_test .  (38)

	.  reduce 38


state 77
	aux4 : aux4 AND . not_test  (39)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	not_test  goto 98
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 78
	aux5 : aux5 comp_op . expr  (45)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	expr  goto 99
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 79
	aux5 : comp_op expr .  (44)

	.  reduce 44


state 80
	aux6 : MAS term .  (56)

	.  reduce 56


state 81
	aux6 : MENOS term .  (57)

	.  reduce 57


state 82
	aux6 : aux6 MAS . term  (58)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	term  goto 100
	factor  goto 30
	power  goto 31
	atom  goto 32


state 83
	aux6 : aux6 MENOS . term  (59)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	term  goto 101
	factor  goto 30
	power  goto 31
	atom  goto 32


state 84
	aux7 : POR factor .  (62)

	.  reduce 62


state 85
	aux7 : DIV factor .  (65)

	.  reduce 65


state 86
	aux7 : DIVENTERA factor .  (63)

	.  reduce 63


state 87
	aux7 : MODULO factor .  (64)

	.  reduce 64


state 88
	aux7 : aux7 POR . factor  (66)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 102
	power  goto 31
	atom  goto 32


state 89
	aux7 : aux7 DIV . factor  (69)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 103
	power  goto 31
	atom  goto 32


state 90
	aux7 : aux7 DIVENTERA . factor  (67)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 104
	power  goto 31
	atom  goto 32


state 91
	aux7 : aux7 MODULO . factor  (68)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	.  error

	factor  goto 105
	power  goto 31
	atom  goto 32


state 92
	power : atom POTENCIA factor .  (74)

	.  reduce 74


state 93
	suite : NEWLINE . INDENT aux2 DEDENT  (28)

	INDENT  shift 106
	.  error


state 94
	suite : simple_stmt .  (27)

	.  reduce 27


state 95
	if_stmt : IF test DOSPUNT suite .  (21)
	if_stmt : IF test DOSPUNT suite . ELSE DOSPUNT suite  (22)
	if_stmt : IF test DOSPUNT suite . if_stmt_aux ELSE DOSPUNT suite  (23)

	ELIF  shift 107
	ELSE  shift 108
	$end  reduce 21
	NEWLINE  reduce 21
	IDENTIFIER  reduce 21
	ENTERO  reduce 21
	REAL  reduce 21
	CADENA  reduce 21
	BOOLEAN  reduce 21
	PRINT  reduce 21
	DEDENT  reduce 21
	MAS  reduce 21
	MENOS  reduce 21
	IF  reduce 21
	WHILE  reduce 21
	NOT  reduce 21

	if_stmt_aux  goto 109


state 96
	while_stmt : WHILE test DOSPUNT suite .  (26)

	.  reduce 26


state 97
	aux3 : aux3 OR and_test .  (35)

	.  reduce 35


state 98
	aux4 : aux4 AND not_test .  (39)

	.  reduce 39


state 99
	aux5 : aux5 comp_op expr .  (45)

	.  reduce 45


state 100
	aux6 : aux6 MAS term .  (58)

	.  reduce 58


state 101
	aux6 : aux6 MENOS term .  (59)

	.  reduce 59


state 102
	aux7 : aux7 POR factor .  (66)

	.  reduce 66


state 103
	aux7 : aux7 DIV factor .  (69)

	.  reduce 69


state 104
	aux7 : aux7 DIVENTERA factor .  (67)

	.  reduce 67


state 105
	aux7 : aux7 MODULO factor .  (68)

	.  reduce 68


state 106
	suite : NEWLINE INDENT . aux2 DEDENT  (28)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	PRINT  shift 7
	MAS  shift 8
	MENOS  shift 9
	IF  shift 10
	WHILE  shift 11
	NOT  shift 12
	.  error

	stmt  goto 110
	simple_stmt  goto 16
	compound_stmt  goto 17
	small_stmt  goto 18
	expr_stmt  goto 19
	print_stmt  goto 20
	test  goto 21
	if_stmt  goto 22
	while_stmt  goto 23
	aux2  goto 111
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 107
	if_stmt_aux : ELIF . test DOSPUNT suite  (24)

	IDENTIFIER  shift 2
	ENTERO  shift 3
	REAL  shift 4
	CADENA  shift 5
	BOOLEAN  shift 6
	MAS  shift 8
	MENOS  shift 9
	NOT  shift 12
	.  error

	test  goto 112
	or_test  goto 24
	and_test  goto 25
	not_test  goto 26
	comparison  goto 27
	expr  goto 28
	term  goto 29
	factor  goto 30
	power  goto 31
	atom  goto 32


state 108
	if_stmt : IF test DOSPUNT suite ELSE . DOSPUNT suite  (22)

	DOSPUNT  shift 113
	.  error


state 109
	if_stmt : IF test DOSPUNT suite if_stmt_aux . ELSE DOSPUNT suite  (23)
	if_stmt_aux : if_stmt_aux . ELIF test DOSPUNT suite  (25)

	ELIF  shift 114
	ELSE  shift 115
	.  error


state 110
	aux2 : stmt .  (29)

	.  reduce 29

